--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -34,7 +34,8 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=polardb_catalog
+    volumes:
+      - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   config-service:
     container_name: "config-service"
