--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,28 @@
 name: nativespringcloud
 services:
 
+  order-service:
+    depends_on:
+      config-service:
+        condition: service_healthy
+      polar-postgres:
+        condition: service_started
+    image: ${REGISTRY}/order-service
+    container_name: "order-service"
+    ports:
+      - 8081:9002
+    healthcheck: # Ensure order Service is running before other services start
+      test: [ "CMD", "/workspace/health-check" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    environment:
+      - THC_PATH=/actuator/health
+      - THC_PORT=9002
+      - BPL_DEBUG_ENABLED=true
+      - BPL_JVM_THREAD_COUNT=50
+      - DB_HOSTNAME=polar-postgres
+      - CONFIG_HOSTNAME=config-service
   catalog-service:
     depends_on:
       config-service:
